fixed news falling out of container

--- a/src/components/HomeNews/HomeNews.css
+++ b/src/components/HomeNews/HomeNews.css
@@ -13,4 +13,5 @@
     align-items: flex-start;
     justify-content: center;
     padding: 0.5vh;
+    overflow: scroll;
 }
